# deep-copy-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  test-lambdas.yml  validate-prompts.yml
.vercel/: project.json
app/: .gitignore  .vercelignore  AppSidebar.tsx  CLAUDE.md  DATABASE_SETUP.md  DATABASE_SETUP_COMPLETE.md  DATABASE_SETUP_GUIDE.md  README-VERCEL-DEPLOYMENT.md  README.md  Upload.tsx  check-and-create-table.js  debug-deepcopy-result.js  debug-job-status.js  debug-job.js  final_backend_schemas.py  instrumentation-client.ts  message.html  middleware.ts  next.config.mjs  package-lock.json  package.json  page.tsx  pnpm-lock.yaml  result.json  rollback-migration.ts  run-migration.ts  sentry.server.config.ts  tailwind.config.js  temp.html  vercel.json
app/app/: globals.css  globals.ts  layout.tsx  (+2 more)
infra/: .gitignore  .nvmrc  CLAUDE.md  L00004.html  PR_MESSAGE_US_16.md  US_IDEAS.md  clean_html.py  commands.txt  comprehensive_results (8).json  listicle_template.html  llm_cost_report.csv  llm_cost_report.json  pr_description.md  render_html.py  results.json  system_flow_documentation.md  test_swipe.sh
infra/ai_pipeline/: Dockerfile  README.md  all_results.json  install_playwright.py  pyproject.toml  result.json  test.json
infra/ai_pipeline/content/: A00002_original.html  A00003.html  A00003.json  L00001.html  L00001.json  L00002_original.html  avatar_sheet_template.txt  research_doc1_content.txt
infra/ai_pipeline/src/pipeline/: data_models.py  handler.py  test_anthropic.py
infra/ai_pipeline/src/pipeline/content/: avatar_sheet.txt  avatar_sheet_template.txt  deep_research_output.txt  doc2_analysis.txt  familiarize.txt  marketing_philosophy.txt  necessary_beliefs.txt  offer_brief.txt  offer_brief_template.txt  research_doc2_content.txt  test_results.json
infra/ai_pipeline/src/pipeline/listicle/: jonesroadbeaty.html  melatonin_pills.html  melatonin_pills_output_Designed for athletes, not snorers: sport-first positioning.html  melatonin_pills_output_Mechanical airway support—no hype, just physics.html  melatonin_pills_output_Sweat-proof adhesion that stays put under intensity.html
infra/ai_pipeline/src/pipeline/output/: Low-profile, matte, athletic design that looks intentional on- and off-camera._output.txt  Mechanically opens nasal passages—designed for athletes (evidence-based, compliance-safe)._output.txt  Stays put in sweat and movement: training-tested adhesion for intervals and races._output.txt
infra/ai_pipeline/src/prelander_ai_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
infra/cdk/lib/lambdas/extract_avatars/: Dockerfile  README.md  avatar_extractor.py  get_largest_image.py  handler.py  pyproject.toml  requirements.txt  test_event.json  test_local.sh
infra/cdk/lib/lambdas/extract_avatars/deepcopy_extract_avatars.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/image_gen_process/: Dockerfile  all_results.json  handler.py  prompts.py  pyproject.toml
infra/cdk/lib/lambdas/image_gen_process/deepcopy_image_gen_process.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/image_gen_process/pipeline/: __init__.py  orchestrator.py
infra/cdk/lib/lambdas/image_gen_process/pipeline/steps/: __init__.py  document_analysis.py  image_generation.py  image_matching.py  product_detection.py
infra/cdk/lib/lambdas/image_gen_process/services/: __init__.py  aws.py  cloudflare_service.py  gemini_service.py  klaviyo_service.py  openai_service.py  prompt_service.py
infra/cdk/lib/lambdas/image_gen_process/src/deepcopy_image_gen_process.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/image_gen_process/utils/: __init__.py  helpers.py  image.py  logging_config.py
infra/cdk/lib/lambdas/prelander_image_gen/: Dockerfile  handler.py  llm_usage.py  pyproject.toml
infra/cdk/lib/lambdas/prelander_image_gen/deepcopy_prelander_image_gen.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/prelander_image_gen/services/: __init__.py  aws.py  cloudflare_service.py  gemini_service.py
infra/cdk/lib/lambdas/prelander_image_gen/utils/: __init__.py  logging_config.py
infra/cdk/lib/lambdas/process_job/: AVATAR_SHEET_GUIDE.md  Dockerfile  OFFER_BRIEF_GUIDE.md  data_models.py  handler.py  llm_usage.py  pyproject.toml  test_anthropic.py
infra/cdk/lib/lambdas/process_job/content/: doc1_analysis.txt
infra/cdk/lib/lambdas/process_job/prelander_ai_pipeline.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/write_swipe/: .dockerignore  Dockerfile  README.md  handler.py  image_prompt_schema.json  llm_usage.py  prompts.py  pyproject.toml  requirements.txt  swipe_file_writer.py  test.json
infra/cdk/lib/lambdas/write_swipe/deepcopy_write_swipe.egg-info/: PKG-INFO
infra/cdk/lib/lambdas/write_swipe/pipeline/: __init__.py  orchestrator.py
infra/cdk/lib/lambdas/write_swipe/pipeline/steps/: __init__.py  swipe_generation.py  template_selection.py
infra/cdk/lib/lambdas/write_swipe/services/: __init__.py  anthropic_service.py  aws.py  prompt_service.py
infra/cdk/lib/lambdas/write_swipe/utils/: __init__.py  helpers.py  html.py  logging_config.py  pdf.py  retry.py
scripts/: dev.sh  local-webhook-watcher.sh  webhook-watcher.sh
(+526 files in other folders)
