[project]
name = "deepcopy-extract-avatars"
version = "0.1.0"
description = "Lambda function for extracting avatars"
authors = [{ name = "Prelander", email = "dev@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "playwright==1.42.0",
    "openai==1.99.3",
    "pydantic==2.6.1",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
]

[tool.setuptools]
py-modules = ["handler", "avatar_extractor", "get_largest_image", "llm_usage"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

