[project]
name = "deepcopy-image-gen-process"
version = "0.1.0"
description = "Lambda image generation processor (static ad variations)"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.40.0",
  "requests>=2.31.0",
  "cloudflare>=4.0.0",
  "pillow>=10.0.0",
  "google-genai>=1.0.0",
  "boto3>=1.26.0",
  "pg8000>=1.31.0",
]

[tool.setuptools]
py-modules = ["handler", "llm_usage"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



