[project]
name = "prelander-ai-pipeline"
version = "0.1.0"
description = "LangChain pipeline for pre-lander copy generation"
authors = [{ name = "Prelander", email = "dev@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.16",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.2.16",
    "openai>=1.43.0",
    "pydantic>=2.8.0",
    "jinja2>=3.1.4",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pypdf>=4.3.1",
    "playwright>=1.40.0",
    "boto3>=1.40.16",
    "pip>=25.2",
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.12.0",
    "pdf2image>=1.17.0",
    "perplexityai>=0.1.0",
]

[tool.setuptools]
py-modules = ["handler", "data_models", "llm_usage"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 
