[project]
name = "deepcopy-write-swipe"
version = "0.1.0"
description = "Lambda function for writing swipe files"
authors = [{ name = "Prelander", email = "dev@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "openai==1.99.3",
    "pydantic==2.6.1",
    "requests>=2.31.0",
    "docstring-parser>=0.16",
]

[tool.setuptools]
py-modules = ["handler", "swipe_file_writer", "llm_usage"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

